--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -5,6 +5,7 @@
                 <td>Descrição</td>
                 <td>Preço</td>
                 <td>Quantidade</td>
+                <td colspan="1" />
             </tr>
     </thead>
     <tbody>
@@ -14,6 +15,10 @@
                 <td><%= produto.descricao %></td>
                 <td><%= produto.preco %></td>
                 <td><%= produto.quantidade %></td>
+                <td><%= button_to "Remover", produto, method: :delete,
+                class:"btn btn-danger", 
+                    data: 
+                    {confirm: "Tem certeza que deseja remover o produto #{produto.nome} ?"} %></td>
             </tr>
         <% end %>
     </tbody>
