--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+    <div class="alert alert-success" role="alert">
+        <%= flash[:notice] %>
+    </div>
+<% end %>
+
 <table class="table table-bordered table-hover">
     <thead>
             <tr>
@@ -23,9 +29,9 @@
         <% end %>
     </tbody>
         </table>
-            <div class="alert alert-success" role="alert">
-                <h4 class="alert-heading">Produto com desconto</h4>
-            </div>
+           
+                <h2>Produto com desconto</h2>
+           
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
